# Vortex-Step-Method

./: .gitignore  AGENTS.md  CITATION.cff  PUSH_PERMISSION_ANALYSIS.md  README.md  changelog.md  pyproject.toml
.github/: copilot-instructions.md
data/TUDELFT_V3_KITE/: README.md  config_kite_CAD.yaml  config_kite_CAD_CFD_polars.yaml  config_kite_CAD_masure_regression.yaml  config_kite_CAD_neuralfoil.yaml  config_kite_kitesim_deformed.yaml  config_kite_surfplan.yaml  config_kite_surfplan_inviscid.yaml  geometry_surfplan_billow_wind_tunnel_scale.csv  wing_geometry.csv  wing_geometry_from_CAD_orderded_tip_to_mid.csv  wing_geometry_from_CAD_orderded_tip_to_mid_copy.csv  wing_geometry_from_surfplan.csv
data/TUDELFT_V3_KITE_stall/: geometry_no_billow_wind_tunnel_scale.csv  rib_list_height_scaled.csv
data/TUDELFT_V3_LEI_KITE/: bridle_lines.csv  geometry_altered.csv  rib_list_height_adjusted.csv
data/cache/: README.md
data/models/: README.md
data/paraglider_Belloc_2015/: README.md  experimental_data.ods
docs/: AirfoilAerodynamics.md  BodyAerodynamics.md  Filament.md  Panel.md  README.md  Solver.md  StabilityDerivatives.md  TrimAngle.md  Wake.md  WingGeometry.md  nomenclature.md  style_guide.md
examples/: fixing_sorting_bug.py
examples/TUDELFT_V3_KITE/: aoa_correction_test.py  attitude_and_yaw_rate_optimize.py  benchmark.py  benchmark_runtime.py  calculate_max_roll.py  cmz_sensitivity_default.py  compare_against_literature.py  comparing_core_methods.py  compute_trim_angle.py  convergence.py  effect_of_KCU_position.py  effect_of_varying_airfoil_shape.py  evaluate_stability_derivatives.py  fit_polynomials_polars.py  kite_stability_dynamics.py  plotting_the_geometry.py  quasi-steady-single-state-modes.py  quasi-steady-solver.py  quasi-steady-stability-derivatives.py  save_polars.py  saving_airfoils_to_yaml_format.py  sensitivity.py  sensivitity_cl_cd_cmy_time.py  sensivity.py  sensivity_polars_and_distributions.py  testing_center_of_pressure_calculation.py  testing_neuralfoil_input.py  testing_new_input.py  tow_angle_geometry.py  tow_angle_vs_aoa.py  tow_point_location_parametric_study.py  tutorial.py  tutorial_new.py  varying_spanwise_va.py
examples/TUDELFT_V3_LEI_KITE/: corrected_polar_0.csv  corrected_polar_1.csv  corrected_polar_11.csv  corrected_polar_12.csv  corrected_polar_13.csv  corrected_polar_14.csv  corrected_polar_15.csv  corrected_polar_16.csv  corrected_polar_17.csv  corrected_polar_18.csv  corrected_polar_2.csv  corrected_polar_3.csv  corrected_polar_4.csv  corrected_polar_6.csv  corrected_polar_7.csv  corrected_polar_8.csv  corrected_polar_9.csv  creating_new_geometry.py  polar_engineering_0.csv  polar_engineering_1.csv  polar_engineering_11.csv  polar_engineering_12.csv  polar_engineering_14.csv  polar_engineering_16.csv  polar_engineering_17.csv  polar_engineering_2.csv  polar_engineering_3.csv  polar_engineering_4.csv  polar_engineering_5.csv  (+6 more)
tests/: thesis_functions_oriol_cayon.py  utils.py
(+770 files in other folders)
