[project]

name = "VSM"
dynamic = ["version"]
description = "A Python package for fast aerodynamic vortex-step method simulations."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["aerodynamics", "wind-energy", "simulation", "vortex-method", "fluid-dynamics", "kite", "paraglider", "airfoil", "python", "numerical-methods", "computational-fluid-dynamics", "CFD", "machine-learning", "regression", "panel-method", "wake", "stability", "foil", "engineering", "renewable-energy", "modeling", "data-analysis"]
authors = [
  {name = "Cayon, Oriol", email = "ocayon@tudelft.nl" },
  {name = "Jelle, Poland", email = "j.a.w.poland@tudelft.nl"}
]
maintainers = [
  {name = "Cayon, Oriol", email = "ocayon@tudelft.nl" },
  {name = "Jelle, Poland", email = "j.a.w.poland@tudelft.nl"}
]
classifiers = [
  # Indicate the development status of your project (maturity). Commonly, this is
  #   3 - Alpha
  #   4 - Beta
  #   5 - Stable
  #.  6 - Mature
  "Development Status :: 5 - Stable",

  # Target audience
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",

  # License type
  "License :: OSI Approved :: MIT License",

  # Python versions your software supports. This is not checked by pip install, and is different from "requires-python".
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy",
  "matplotlib>=3.7.1",
  "scipy",
  "plotly",
  "pandas",
  "neuralfoil",
  "PyYAML",
  "scikit-learn",
  "numba",
  "screeninfo",
  "odfpy",
]
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  ]

# List of relevant URLs for your project. These are displayed on the left sidebar of your PyPI page.
# This can include links to the homepage, source code, changelog, funding, etc.
[project.urls]
"Homepage" = "https://github.com/awegroup/Vortex-Step-Method"
"Source" = "https://github.com/awegroup/Vortex-Step-Method"
"Documentation" = "https://github.com/awegroup/Vortex-Step-Method#readme"
#"Changelog" = "https://github.com/awegroup/Vortex-Step-Method/releases"
#"Funding" = "https://github.com/awegroup/Vortex-Step-Method#funding"
"Bug Tracker" = "https://github.com/awegroup/Vortex-Step-Method/issues"
"Download" = "https://github.com/awegroup/Vortex-Step-Method/releases"
# To grab all the files from the src folders of installed packages, not only the .py files
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
# Setuptools is the build backend; version 61+ supports PEP 621 [project] metadata
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
